2006-09-13  Ruben Vermeersch  <ruben@savanne.be>

	* plugins/MiniMode/MiniModeWindow.cs: Get the default cover from
	Banshee.Base.Branding.

2006-09-08  Mike Urbanski <michael.c.urbanski@gmail.com> 
	
	* plugins/Podcast/DownloadCore/DownloadCore.cs:
	* plugins/Podcast/PodcastPlugin.cs:
	* plugins/Podcast/UI/PodcastFeedView.cs:
	* plugins/Podcast/UI/PodcastPixbufs.cs:
	* plugins/Podcast/UI/PodcastSource.cs:
	* plugins/Podcast/UI/PodcastPlaylistView.cs:  Stock icons are
	now used.  (BGO #346037)

	* plugins/Podcast/data/images/go-next.png:
	* plugins/Podcast/data/images/edit-delete.png:
	* plugins/Podcast/data/images/go-next-grey.png:
	* plugins/Podcast/data/images/dialog-error.png:
	* plugins/Podcast/data/images/view-refresh.png:  Deleted
	
	* plugins/Podcast/Podcast.mdp:  Removed (above) images from project.
	
2006-09-05  Aaron Bockover  <abock@gnome.org>

	* configure.ac:
	* plugins/Makefile.am:
	* plugins/SmartPlaylists: Moved the smart playlist plugin from 
	banshee-official-plugins into Banshee core as a built-in component;
	update your Banshee core checkout and remove any binary installation
	of the old SmartPlaylist plugin from your install!

2006-09-05  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/smart-playlist.glade: Change the label of the
	expander to Predefined Smart Tags from Advanced Options.

	* plugins/SmartPlaylists/QueryBuilderModel.cs: Fix small bug w/
	reconstructing date condition fields.

	* plugins/SmartPlaylists/Editor.cs: Small change to def of favorites.

2006-09-04  Gabriel Burt  <gabriel.burt@gmail.com>

	* plugins/SmartPlaylists/smart-playlist.glade: Add Advanced expander to
	the smart playlist edit dialog.

	* plugins/SmartPlaylists/Makefile.am: Move things around.

	* plugins/SmartPlaylists/Editor.cs: Add options to the advanced expander's
	treeview of predefined smart playlists, and handle the logic for using
	them as a template or creating them.

2006-09-04  Ruben Vermeersch <ruben@Lambda1.be>
