@@ -1,3 +1,8 @@
+2006-09-13  Aaron Bockover  <abock@gnome.org>
+
+	* plugins/MiniMode/MiniModeWindow.cs: Added tool tips (Michael Monreal,
+	BGO #355844)
+
 2006-09-13  Ruben Vermeersch  <ruben@savanne.be>
 
 	* plugins/MiniMode/MiniModeWindow.cs: Get the default cover from
